--- a/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
+++ b/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C800A79A-E3AC-4581-BF3B-F9527FD46EE7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BizTalkComponents.CopyContextProperty</RootNamespace>
-    <AssemblyName>BizTalkComponents.CopyContextProperty</AssemblyName>
+    <RootNamespace>BizTalkComponents.PipelineComponents.CopyContextProperty</RootNamespace>
+    <AssemblyName>BizTalkComponents.PipelineComponents.CopyContextProperty</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BizTalkComponents.Utils">
