--- a/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
+++ b/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
@@ -39,8 +39,9 @@
     <AssemblyOriginatorKeyFile>BizTalkComponents.PipelineComponents.CopyContextProperty.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BizTalkComponents.Utils">
-      <HintPath>..\packages\BizTalkComponents.Utils.1.0.0\lib\net40\BizTalkComponents.Utils.dll</HintPath>
+    <Reference Include="BizTalkComponents.Utils, Version=1.0.0.0, Culture=neutral, PublicKeyToken=87c265fe42e38fa5, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\BizTalkComponents.Utils.1.0.1\lib\net40\BizTalkComponents.Utils.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.BizTalk.Pipeline, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
