Added reference to test tools

--- a/Tests/UnitTests/BizTalkComponents.CopyContextProperty.Tests.UnitTests.csproj
+++ b/Tests/UnitTests/BizTalkComponents.CopyContextProperty.Tests.UnitTests.csproj
@@ -41,6 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Dependencies\Microsoft.BizTalk.Pipeline.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.BizTalk.TestTools, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Dependencies\Microsoft.BizTalk.TestTools.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="Winterdom.BizTalk.PipelineTesting">
       <HintPath>..\..\packages\Winterdom.BizTalk.PipelineTesting.1.2.1.0\lib\net45\Winterdom.BizTalk.PipelineTesting.dll</HintPath>
