--- a/Tests/UnitTests/BizTalkComponents.CopyContextProperty.Tests.UnitTests.csproj
+++ b/Tests/UnitTests/BizTalkComponents.CopyContextProperty.Tests.UnitTests.csproj
@@ -41,9 +41,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Dependencies\Microsoft.BizTalk.Pipeline.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.BizTalk.TestTools, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="PipelineObjects, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\Microsoft.BizTalk.TestTools.dll</HintPath>
+      <HintPath>..\..\Dependencies\PipelineObjects.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="Winterdom.BizTalk.PipelineTesting">
