--- a/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.nuspec
+++ b/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>BizTalkComponents.CopyContextProperty</id>
-    <version>1.0.2</version>
+    <id>BizTalkComponents.PipelineComponents.CopyContextProperty</id>
+    <version>1.0.0.0</version>
     <authors>Robin Hultman</authors>
     <owners>ibizsolutions</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
