Fixed package reference

--- a/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
+++ b/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="BizTalkComponents.CopyContextProperty.csproj.nuspec" />
+    <None Include="BizTalkComponents.PipelineComponents.CopyContextProperty.nuspec" />
     <None Include="BizTalkComponents.PipelineComponents.CopyContextProperty.snk" />
     <None Include="packages.config" />
   </ItemGroup>
