Updated to latest version of Util project

--- a/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
+++ b/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\Dependencies\Microsoft.BizTalk.Pipeline.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,7 +57,10 @@
   <ItemGroup>
     <Compile Include="BiztalkComponents.Utils\ContextExtensions.cs" />
     <Compile Include="BiztalkComponents.Utils\ContextProperties.cs" />
+    <Compile Include="BiztalkComponents.Utils\ContextProperty.cs" />
     <Compile Include="BiztalkComponents.Utils\PropertyBagHelper.cs" />
+    <Compile Include="BiztalkComponents.Utils\RequiredRuntimeAttribute.cs" />
+    <Compile Include="BiztalkComponents.Utils\ValidationHelper.cs" />
     <Compile Include="CopyContextProperty.cs" />
     <Compile Include="CopyContextProperty.Component.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
