--- a/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.nuspec
+++ b/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.nuspec
@@ -2,11 +2,11 @@
 <package >
   <metadata>
     <id>BizTalkComponents.PipelineComponents.CopyContextProperty</id>
-    <version>1.0.0.0</version>
+    <version>1.0.0.1</version>
     <authors>Robin Hultman</authors>
     <owners>ibizsolutions</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectUrl>https://github.com/ibizsolutions/BizTalkComponents.CopyContextProperty</projectUrl>
+    <projectUrl>https://github.com/BizTalkComponents/CopyContextProperty</projectUrl>
     <description>Pipeline component to copy one context property to another</description>
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2014</copyright>
