--- a/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
+++ b/Src/CopyContextProperty/BizTalkComponents.PipelineComponents.CopyContextProperty.csproj
@@ -61,6 +61,8 @@
     <Compile Include="BiztalkComponents.Utils\PropertyBagHelper.cs" />
     <Compile Include="BiztalkComponents.Utils\RequiredRuntimeAttribute.cs" />
     <Compile Include="BiztalkComponents.Utils\ValidationHelper.cs" />
+    <Compile Include="CopyContextPropertyWithNullCoalescing.cs" />
+    <Compile Include="CopyContextPropertyWithNullCoalescing.Component.cs" />
     <Compile Include="CopyContextProperty.cs" />
     <Compile Include="CopyContextProperty.Component.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
